appId: host.exp.Exponent
name: Round Screen
tags:
  - smoke
---
- launchApp
- tapOn: what-of-the-year

- tapOn: "Start"
- waitForAnimationToEnd

- tapOn: "User name"
- inputText: "Test User"

- tapOn: "Start"
- waitForAnimationToEnd

- assertVisible: "Round 1"
