appId: host.exp.Exponent
name: Set Up
tags:
  - smoke
---
- launchApp
- tapOn: what-of-the-year

- tapOn: "Start"
- waitForAnimationToEnd

- assertVisible: "Random"

- assertVisible: "User name"
# Verify the Start button is visible (but may be disabled)
- assertVisible: "Start"
